--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -32,8 +32,31 @@ main {
   line-height: normal;
   font-weight: normal;
   margin-bottom: 1em;
-  text-align: right;
+  text-align: center;
   color:#000000 ;
   letter-spacing: normal;
+  border-radius: 15px;
+  border-style: ridge;
+  border-color: #003e19 ;
+  border-width: medium;
+
+}
+
+/*Style of aside*/
+aside{
+  background-color: white;
+  border-radius: 15px;
+  border-style: ridge;
+  border-width: medium;
+
+}
+
+/*Footer*/
+footer {
+  background-color: #008e49 ;
+  border-radius: 15px;
+  border-style: ridge;
+  border-color: #003e19 ;
+  border-width: medium;
 
 }
