--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -1,7 +1,10 @@
 /*Style of the body*/
 body {
   background-color:#008e49 ;
+  background-image: image(images/wildfire.jpg);
   font-family: 'Times New Roman', serif;
+  <!--image source:https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Deerfire_high_res_edit.jpg/1200px-Deerfire_high_res_edit.jpg-->
+
 
 }
 /*Style of h1*/
@@ -48,7 +51,7 @@ center{
   border-radius: 15px;
   border-style: ridge;
   border-width: medium;
-  
+
 
 }
 
