images and sample

--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -1,6 +1,6 @@
 /*Style of the body*/
 body {
-  background-color:#008e49 ;
+  background-image: image(./images/wildfire.jpg);
   font-family: 'Times New Roman', serif;
 
 
