--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -83,16 +83,15 @@ footer {
   font-style: italic;
 }
 
-
 .menu-item {
   margin: auto;
   padding: 0.5em;
   min-width: 100px;
-  color: #007747;
-  background-color: #003e19;
+  color: #5e3d32;
+  background-color: #5e3d32;
 }
 
 .menu-item:hover {
-  background-color: #003e19;
-  color: #007747;
+  background-color: #5e3d32;
+  color: #b12500;
 }
