--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -95,3 +95,10 @@ footer {
   background-color: #5e3d32;
   color: #b12500;
 }
+
+.parent-container {
+  width: 70%;
+  background-color: #003319;
+}
+
+.parent-container 
