--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -35,7 +35,7 @@ main {
   font-weight: normal;
   margin-bottom: 1em;
   text-align: center;
-  color:#000000 ;
+  color:#008e49 ;
   letter-spacing: normal;
   border-radius: 15px;
   border-style: ridge;
