--- a/project-3/css/style.css
+++ b/project-3/css/style.css
@@ -13,7 +13,7 @@ h1 {
   font-weight: normal;
   margin-bottom: 1em;
   text-align: center;
-  color:#000000 ;
+  color:#008e49 ;
   letter-spacing: normal;
 
 }
