--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -69,27 +69,27 @@ body {
 
 }
 
-@media (min-width: 550px) {
-  .whatis, .whyuse {
-    width: 50%;
+
+
+  @media (min-width: 450px) {
+      .whatis, .whyuse {
+          width: 50%;
+      }
   }
 
-}
-@media (min-width: 700px) {
-  .main-container {
-    width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-
+  @media (min-width: 550px) {
+      .whatis .whyuse {
+          width: 50%;
+      }
+      .process {
+          width: 33.33333%;
+      }
   }
-}
 
-  @media (max-width: 1000px) {
-    .whatis {
-      width: 50%;
-    }
-    .process, .whyuse {
-      width: 33%;
-    }
-
+  @media (min-width: 700px) {
+      .main-container {
+          width: 700px;
+          margin-left: auto;
+          margin-right: auto;
+      }
   }
