--- a/project-4/css/style.css
+++ b/project-4/css/style.css
@@ -14,7 +14,7 @@
 
 /*Title*/
 .title {
-  background-color: #006a47, 0.85;
+  background-color: #006a47;
   width: 100%;
   text-align: center;
   order: 1;
@@ -23,7 +23,7 @@
 
 /*What is RWD?*/
 .whatis {
-  background-color: #024b79, 0.85;
+  background-color: #024b79;
   width: 100%;
   height: auto;
   text-align: center;
@@ -33,7 +33,7 @@
 }
 /*Why Designers should utilize RWD approach*/
 .whyuse {
-  background-color: #d79133, 0.85;
+  background-color: #d79133;
   width: 100%;
   height: auto;
   text-align: center;
@@ -44,7 +44,7 @@
 
 /*Process*/
 .process {
-  background-color: #c7b300, 0.85;
+  background-color: #c7b300;
   width: 100%;
   height: auto;
   text-align: center;
